--- a/Case Study 6/JD_draft2.ipynb
+++ b/Case Study 6/JD_draft2.ipynb
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -59,7 +59,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F87QcNvBCjLJ",
-        "outputId": "934d624f-fa35-41dc-b030-82d8ce7d9186"
+        "outputId": "cac3123e-861c-4629-bd49-075580a5f683"
       },
       "execution_count": 2,
       "outputs": [
@@ -80,19 +80,19 @@
       "metadata": {
         "id": "UOK92J9MDHtR"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 236
         },
         "id": "x2nBjd_Q4Mra",
-        "outputId": "f029df0e-2273-4f7e-f624-d431dda0a5e3"
+        "outputId": "d45eea95-3a0e-48f7-a697-fe74493cab8e"
       },
       "outputs": [
         {
@@ -124,7 +124,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c0579978-9b1a-4f93-a1c6-fa77bad0edba\">\n",
+              "  <div id=\"df-5d73e797-376c-41f5-806d-8169641e0a3a\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -292,7 +292,7 @@
               "</table>\n",
               "<p>5 rows × 29 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c0579978-9b1a-4f93-a1c6-fa77bad0edba')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5d73e797-376c-41f5-806d-8169641e0a3a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -343,12 +343,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c0579978-9b1a-4f93-a1c6-fa77bad0edba button.colab-df-convert');\n",
+              "          document.querySelector('#df-5d73e797-376c-41f5-806d-8169641e0a3a button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c0579978-9b1a-4f93-a1c6-fa77bad0edba');\n",
+              "          const element = document.querySelector('#df-5d73e797-376c-41f5-806d-8169641e0a3a');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -371,7 +371,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         }
       ],
       "source": [
@@ -380,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -415,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -450,7 +450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -485,7 +485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -518,7 +518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -573,13 +573,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SZA9qFW84Mrj",
-        "outputId": "e57d54e7-2b8e-4b00-f911-1f33734880ca"
+        "outputId": "26bc7eb5-3c96-4c2e-fbdc-7bbbbc78911c"
       },
       "outputs": [
         {
@@ -592,7 +592,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 6
         }
       ],
       "source": [
@@ -602,7 +602,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 3,
       "metadata": {
         "id": "UJ3DaqML4Mrk"
       },
@@ -613,7 +613,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 4,
       "metadata": {
         "id": "HTT_Ao9R4Mrk"
       },
@@ -634,7 +634,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 5,
       "metadata": {
         "id": "WGIOmxdq4Mrl"
       },
@@ -646,7 +646,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 6,
       "metadata": {
         "id": "xGHjXFAx4Mrm"
       },
@@ -658,7 +658,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 7,
       "metadata": {
         "id": "RbNKulAN4Mrm"
       },
@@ -749,7 +749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 8,
       "metadata": {
         "id": "-dKr-d7B4Mro"
       },
@@ -765,12 +765,23 @@
     {
       "cell_type": "code",
       "source": [
+        "scaled_Xtest = scaler.transform(X_test)"
+      ],
+      "metadata": {
+        "id": "tvm91TrnJqBz"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "my_model = tf.keras.Sequential()"
       ],
       "metadata": {
         "id": "fHJ5aE4nFGjn"
       },
-      "execution_count": 13,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -783,9 +794,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0B4z0QsPFPH6",
-        "outputId": "ef16124a-010d-4232-f7f9-a6871c84d260"
+        "outputId": "2c1e1b05-6c0d-484d-92b7-88133e5189d9"
       },
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -795,7 +806,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 11
         }
       ]
     },
@@ -810,94 +821,83 @@
       "metadata": {
         "id": "fSr1uFf2FNC2"
       },
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "my_model.compile(optimizer = 'sgd', loss='BinaryCrossentropy', metrics = ['accuracy'])"
+        "my_model.compile(optimizer = 'adam', loss='BinaryCrossentropy', metrics = ['accuracy', tf.keras.metrics.Precision(), tf.keras.metrics.Recall()])"
       ],
       "metadata": {
         "id": "MK3yfCTyG0G4"
       },
-      "execution_count": 16,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "my_model.fit(scaled_X, y_train, epochs = 5, batch_size=15)"
+        "my_model.fit(scaled_X, y_train, epochs = 5, batch_size=20, validation_data=(scaled_Xtest, y_test))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "A3tj-ejZH6r1",
-        "outputId": "c4bfafd4-3df3-4243-d328-a4e22cca7fbe"
+        "outputId": "7de9e5ff-ec26-4b1a-9995-00888db3676e"
       },
-      "execution_count": 17,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "373334/373334 [==============================] - 1012s 3ms/step - loss: 0.3261 - accuracy: 0.8465\n",
+            "280000/280000 [==============================] - 1115s 4ms/step - loss: 0.2844 - accuracy: 0.8688 - precision: 0.8517 - recall: 0.8930 - val_loss: 0.2733 - val_accuracy: 0.8755 - val_precision: 0.8691 - val_recall: 0.8846\n",
             "Epoch 2/5\n",
-            "373334/373334 [==============================] - 1003s 3ms/step - loss: 0.2936 - accuracy: 0.8622\n",
+            "280000/280000 [==============================] - 1162s 4ms/step - loss: 0.2703 - accuracy: 0.8775 - precision: 0.8606 - recall: 0.9011 - val_loss: 0.2680 - val_accuracy: 0.8790 - val_precision: 0.8612 - val_recall: 0.9039\n",
             "Epoch 3/5\n",
-            "373334/373334 [==============================] - 998s 3ms/step - loss: 0.2865 - accuracy: 0.8667\n",
+            "280000/280000 [==============================] - 1162s 4ms/step - loss: 0.2673 - accuracy: 0.8792 - precision: 0.8620 - recall: 0.9030 - val_loss: 0.2670 - val_accuracy: 0.8793 - val_precision: 0.8529 - val_recall: 0.9171\n",
             "Epoch 4/5\n",
-            "373334/373334 [==============================] - 990s 3ms/step - loss: 0.2833 - accuracy: 0.8686\n",
+            "280000/280000 [==============================] - 1158s 4ms/step - loss: 0.2660 - accuracy: 0.8799 - precision: 0.8626 - recall: 0.9038 - val_loss: 0.2663 - val_accuracy: 0.8797 - val_precision: 0.8657 - val_recall: 0.8992\n",
             "Epoch 5/5\n",
-            "373334/373334 [==============================] - 1038s 3ms/step - loss: 0.2813 - accuracy: 0.8699\n"
+            "280000/280000 [==============================] - 1152s 4ms/step - loss: 0.2652 - accuracy: 0.8805 - precision: 0.8631 - recall: 0.9043 - val_loss: 0.2649 - val_accuracy: 0.8807 - val_precision: 0.8646 - val_recall: 0.9031\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7fddf045c850>"
+              "<keras.callbacks.History at 0x7f7b00230fd0>"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 14
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "my_model.save('tf_model_1.h5')"
+        "my_model.save('tf_model_2.h5')"
       ],
       "metadata": {
         "id": "xbh20PY5LpgH"
       },
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# load model\n",
-        "# my_model = tf.keras.models.load_model('tf_model_1.h5')"
+        "my_model = tf.keras.models.load_model('/content/tf_model_1.h5')"
       ],
       "metadata": {
         "id": "7twmWpvoPJmV"
       },
-      "execution_count": 23,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "scaled_Xtest = scaler.transform(X_test)"
-      ],
-      "metadata": {
-        "id": "tvm91TrnJqBz"
-      },
-      "execution_count": 20,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -911,15 +911,62 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W-nnF-K8Jb68",
-        "outputId": "b58edf6d-07a2-4511-9250-78ecf11f6006"
+        "outputId": "955d17ee-0431-47d4-d5ed-fb46b57ced31"
       },
-      "execution_count": 22,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Accuracy: 87.01678514480591\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.metrics import recall_score\n",
+        "from sklearn.metrics import precision_score\n",
+        "\n",
+        "preds = my_model.predict(scaled_Xtest)\n",
+        "rec = recall_score(y_test,preds)\n",
+        "prec = precision_score(y_test, preds)\n",
+        "print(f'Recall Score: {rec}')\n",
+        "print(f'Precision Score: {prec}')\n"
+      ],
+      "metadata": {
+        "id": "Ss6VdBos8JpZ",
+        "outputId": "af1297ee-6323-4daf-84a0-bd8893cc9b5f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 402
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "43750/43750 [==============================] - 63s 1ms/step\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-17-971ea84820e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mpreds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmy_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscaled_Xtest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mrec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrecall_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpreds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mprec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprecision_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpreds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Recall Score: {rec}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36mrecall_score\u001b[0;34m(y_true, y_pred, labels, pos_label, average, sample_weight, zero_division)\u001b[0m\n\u001b[1;32m   1907\u001b[0m         \u001b[0mwarn_for\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"recall\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1908\u001b[0m         \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1909\u001b[0;31m         \u001b[0mzero_division\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mzero_division\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1910\u001b[0m     )\n\u001b[1;32m   1911\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36mprecision_recall_fscore_support\u001b[0;34m(y_true, y_pred, beta, labels, pos_label, average, warn_for, sample_weight, zero_division)\u001b[0m\n\u001b[1;32m   1542\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mbeta\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1543\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"beta should be >=0 in the F-beta score\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1544\u001b[0;31m     \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_set_wise_labels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maverage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpos_label\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1545\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1546\u001b[0m     \u001b[0;31m# Calculate tp_sum, pred_sum, true_sum ###\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36m_check_set_wise_labels\u001b[0;34m(y_true, y_pred, average, labels, pos_label)\u001b[0m\n\u001b[1;32m   1346\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"average has to be one of \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maverage_options\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1347\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1348\u001b[0;31m     \u001b[0my_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1349\u001b[0m     \u001b[0;31m# Convert to Python primitive type to avoid NumPy type / Python str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1350\u001b[0m     \u001b[0;31m# comparison. See https://github.com/numpy/numpy/issues/6784\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36m_check_targets\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m     93\u001b[0m         raise ValueError(\n\u001b[1;32m     94\u001b[0m             \"Classification metrics can't handle a mix of {0} and {1} targets\".format(\n\u001b[0;32m---> 95\u001b[0;31m                 \u001b[0mtype_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype_pred\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     96\u001b[0m             )\n\u001b[1;32m     97\u001b[0m         )\n",
+            "\u001b[0;31mValueError\u001b[0m: Classification metrics can't handle a mix of binary and continuous targets"
           ]
         }
       ]
