Logistic Regression - Joaquin

--- a/Case Study 7/JD_draft.ipynb
+++ b/Case Study 7/JD_draft.ipynb
@@ -1320,6 +1320,263 @@
     "print(f'Recall Score: {rec}')\n",
     "print(f'Precision Score: {prec}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.705483127623978\n",
+      "Recall Score: 0.5228192713707437\n",
+      "Precision Score: 0.665017667844523\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import LogisticRegressionCV\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "lr = LogisticRegressionCV(random_state=9, cv =5).fit(X_train_scaled, y_train)\n",
+    "lr_preds = lr.predict(X_test_scaled)\n",
+    "print(f'Accuracy: {accuracy_score(y_test, lr_preds)}')\n",
+    "rec = recall_score(y_test,lr_preds)\n",
+    "prec = precision_score(y_test, lr_preds)\n",
+    "print(f'Recall Score: {rec}')\n",
+    "print(f'Precision Score: {prec}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n",
+      "[CV] END ......multi_class=ovr, penalty=l2, solver=liblinear; total time=   1.6s\n",
+      "[CV] END ......multi_class=ovr, penalty=l2, solver=liblinear; total time=   1.7s\n",
+      "[CV] END ......multi_class=ovr, penalty=l2, solver=liblinear; total time=   1.7s\n",
+      "[CV] END ......multi_class=ovr, penalty=l2, solver=liblinear; total time=   1.7s\n",
+      "[CV] END ..........multi_class=ovr, penalty=l2, solver=lbfgs; total time=   0.4s\n",
+      "[CV] END ..........multi_class=ovr, penalty=l2, solver=lbfgs; total time=   0.7s\n",
+      "[CV] END ..........multi_class=ovr, penalty=l2, solver=lbfgs; total time=   0.7s\n",
+      "[CV] END ..........multi_class=ovr, penalty=l2, solver=lbfgs; total time=   0.8s\n",
+      "[CV] END ..........multi_class=ovr, penalty=l2, solver=lbfgs; total time=   0.6s\n",
+      "[CV] END ......multi_class=ovr, penalty=l2, solver=liblinear; total time=   1.9s\n",
+      "[CV] END ............multi_class=ovr, penalty=l2, solver=sag; total time=   2.5s\n",
+      "[CV] END ............multi_class=ovr, penalty=l2, solver=sag; total time=   4.2s\n",
+      "[CV] END ............multi_class=ovr, penalty=l2, solver=sag; total time=   5.4s\n",
+      "[CV] END ............multi_class=ovr, penalty=l2, solver=sag; total time=   5.2s\n",
+      "[CV] END ............multi_class=ovr, penalty=l2, solver=sag; total time=   6.6s\n",
+      "[CV] END ......multi_class=ovr, penalty=l1, solver=liblinear; total time= 1.4min\n",
+      "[CV] END ......multi_class=ovr, penalty=l1, solver=liblinear; total time= 1.4min\n",
+      "[CV] END ..........multi_class=ovr, penalty=l1, solver=lbfgs; total time=   0.0s\n",
+      "[CV] END ..........multi_class=ovr, penalty=l1, solver=lbfgs; total time=   0.0s\n",
+      "[CV] END ..........multi_class=ovr, penalty=l1, solver=lbfgs; total time=   0.0s\n",
+      "[CV] END ..........multi_class=ovr, penalty=l1, solver=lbfgs; total time=   0.0s\n",
+      "[CV] END ..........multi_class=ovr, penalty=l1, solver=lbfgs; total time=   0.0s\n",
+      "[CV] END ............multi_class=ovr, penalty=l1, solver=sag; total time=   0.0s\n",
+      "[CV] END ............multi_class=ovr, penalty=l1, solver=sag; total time=   0.0s\n",
+      "[CV] END ............multi_class=ovr, penalty=l1, solver=sag; total time=   0.0s\n",
+      "[CV] END ............multi_class=ovr, penalty=l1, solver=sag; total time=   0.0s\n",
+      "[CV] END ............multi_class=ovr, penalty=l1, solver=sag; total time=   0.0s\n",
+      "[CV] END ....multi_class=ovr, penalty=none, solver=liblinear; total time=   0.0s\n",
+      "[CV] END ....multi_class=ovr, penalty=none, solver=liblinear; total time=   0.0s\n",
+      "[CV] END ....multi_class=ovr, penalty=none, solver=liblinear; total time=   0.0s\n",
+      "[CV] END ....multi_class=ovr, penalty=none, solver=liblinear; total time=   0.0s\n",
+      "[CV] END ....multi_class=ovr, penalty=none, solver=liblinear; total time=   0.0s\n",
+      "[CV] END ........multi_class=ovr, penalty=none, solver=lbfgs; total time=   0.5s\n",
+      "[CV] END ........multi_class=ovr, penalty=none, solver=lbfgs; total time=   0.7s\n",
+      "[CV] END ........multi_class=ovr, penalty=none, solver=lbfgs; total time=   0.7s\n",
+      "[CV] END ........multi_class=ovr, penalty=none, solver=lbfgs; total time=   0.6s\n",
+      "[CV] END ........multi_class=ovr, penalty=none, solver=lbfgs; total time=   0.7s\n",
+      "[CV] END ......multi_class=ovr, penalty=l1, solver=liblinear; total time= 1.5min\n",
+      "[CV] END ..........multi_class=ovr, penalty=none, solver=sag; total time=   3.0s\n",
+      "[CV] END ......multi_class=ovr, penalty=l1, solver=liblinear; total time=  13.8s\n",
+      "[CV] END ......multi_class=ovr, penalty=l1, solver=liblinear; total time= 1.6min\n",
+      "[CV] END ..........multi_class=ovr, penalty=none, solver=sag; total time=   5.8s\n",
+      "[CV] END multi_class=ovr, penalty=elasticnet, solver=liblinear; total time=   0.0s\n",
+      "[CV] END multi_class=ovr, penalty=elasticnet, solver=liblinear; total time=   0.0s\n",
+      "[CV] END multi_class=ovr, penalty=elasticnet, solver=liblinear; total time=   0.0s\n",
+      "[CV] END multi_class=ovr, penalty=elasticnet, solver=liblinear; total time=   0.0s\n",
+      "[CV] END multi_class=ovr, penalty=elasticnet, solver=liblinear; total time=   0.0s\n",
+      "[CV] END ..multi_class=ovr, penalty=elasticnet, solver=lbfgs; total time=   0.0s\n",
+      "[CV] END ..multi_class=ovr, penalty=elasticnet, solver=lbfgs; total time=   0.0s\n",
+      "[CV] END ..multi_class=ovr, penalty=elasticnet, solver=lbfgs; total time=   0.0s\n",
+      "[CV] END ..multi_class=ovr, penalty=elasticnet, solver=lbfgs; total time=   0.0s\n",
+      "[CV] END ..multi_class=ovr, penalty=elasticnet, solver=lbfgs; total time=   0.0s\n",
+      "[CV] END ....multi_class=ovr, penalty=elasticnet, solver=sag; total time=   0.0s\n",
+      "[CV] END ....multi_class=ovr, penalty=elasticnet, solver=sag; total time=   0.0s\n",
+      "[CV] END ....multi_class=ovr, penalty=elasticnet, solver=sag; total time=   0.0s\n",
+      "[CV] END ....multi_class=ovr, penalty=elasticnet, solver=sag; total time=   0.0s\n",
+      "[CV] END ....multi_class=ovr, penalty=elasticnet, solver=sag; total time=   0.0s\n",
+      "[CV] END ..........multi_class=ovr, penalty=none, solver=sag; total time=   5.1s\n",
+      "[CV] END ..........multi_class=ovr, penalty=none, solver=sag; total time=   4.8s\n",
+      "[CV] END ..........multi_class=ovr, penalty=none, solver=sag; total time=   6.5s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/model_selection/_validation.py:378: FitFailedWarning: \n",
+      "30 fits failed out of a total of 60.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "5 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/model_selection/_validation.py\", line 686, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/linear_model/_logistic.py\", line 1091, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/linear_model/_logistic.py\", line 61, in _check_solver\n",
+      "    raise ValueError(\n",
+      "ValueError: Solver lbfgs supports only 'l2' or 'none' penalties, got l1 penalty.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "5 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/model_selection/_validation.py\", line 686, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/linear_model/_logistic.py\", line 1091, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/linear_model/_logistic.py\", line 61, in _check_solver\n",
+      "    raise ValueError(\n",
+      "ValueError: Solver sag supports only 'l2' or 'none' penalties, got l1 penalty.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "5 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/model_selection/_validation.py\", line 686, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/linear_model/_logistic.py\", line 1091, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/linear_model/_logistic.py\", line 78, in _check_solver\n",
+      "    raise ValueError(\"penalty='none' is not supported for the liblinear solver\")\n",
+      "ValueError: penalty='none' is not supported for the liblinear solver\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "5 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/model_selection/_validation.py\", line 686, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/linear_model/_logistic.py\", line 1091, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/linear_model/_logistic.py\", line 71, in _check_solver\n",
+      "    raise ValueError(\n",
+      "ValueError: Only 'saga' solver supports elasticnet penalty, got solver=liblinear.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "5 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/model_selection/_validation.py\", line 686, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/linear_model/_logistic.py\", line 1091, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/linear_model/_logistic.py\", line 61, in _check_solver\n",
+      "    raise ValueError(\n",
+      "ValueError: Solver lbfgs supports only 'l2' or 'none' penalties, got elasticnet penalty.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "5 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/model_selection/_validation.py\", line 686, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/linear_model/_logistic.py\", line 1091, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/linear_model/_logistic.py\", line 61, in _check_solver\n",
+      "    raise ValueError(\n",
+      "ValueError: Solver sag supports only 'l2' or 'none' penalties, got elasticnet penalty.\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "/home/joaquin/Documents/SMU/NLP/homework/.venv/lib64/python3.11/site-packages/sklearn/model_selection/_search.py:953: UserWarning: One or more of the test scores are non-finite: [0.66724676 0.66726447 0.66721328 0.66723243        nan        nan\n",
+      "        nan 0.66725553 0.66721328        nan        nan        nan]\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'multi_class': 'ovr', 'penalty': 'l2', 'solver': 'lbfgs'}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "params = {\n",
+    "    'penalty': ['l2', 'l1', 'none', 'elasticnet'],\n",
+    "    'solver': ['liblinear', 'lbfgs', 'sag'],\n",
+    "    'multi_class': ['ovr']\n",
+    "}\n",
+    "\n",
+    "lr_rs = LogisticRegression()\n",
+    "clf_rs = GridSearchCV(lr_rs, params, scoring = 'precision', cv = 5, n_jobs = 4, verbose = 2)\n",
+    "clf_rs.fit(X_train_scaled, y_train)\n",
+    "clf_rs.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7055462609299537\n",
+      "Recall Score: 0.5228986427494245\n",
+      "Precision Score: 0.6651186269560828\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr_preds = clf_rs.predict(X_test_scaled)\n",
+    "print(f'Accuracy: {accuracy_score(y_test, lr_preds)}')\n",
+    "rec = recall_score(y_test,lr_preds)\n",
+    "prec = precision_score(y_test, lr_preds)\n",
+    "print(f'Recall Score: {rec}')\n",
+    "print(f'Precision Score: {prec}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NN"
+   ]
   }
  ],
  "metadata": {
